[package]
name = "rust-images-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
error-chain = "0.12.4"
reqwest = "0.11.12"
tokio = { version = "1.21.1", features = ["full"] }